# fastapi_project

./: .env.example  .gitignore  BE_run.sh  DB_sync.sh  FE_run.sh  README.md  alembic.ini  database.py  generate_sitecustomize.py  guide.md  main.py  models.py  pyproject.toml  x.py
backend/: alembic.ini
backend/migrations/: env.py
backend/migrations/versions/: 12ebf507aa90_.py  303dd3d4ab8e_.py  4c40b3782961_.py  b0678d251434_.py  e08856e916f2_initial_migration_after_cleanup.py  e6c8039407dd_.py
backend/src/app/: database.py  main.py
backend/src/app/crud/: question_crud.py  user_crud.py
backend/src/app/models/: __init__.py  answer.py  common.py  instruction.py  modelsExample.py  question.py  route.py  trip.py  user.py  waypoint.py
backend/src/app/router/: question_router.py  user_router.py
backend/src/app/schema/: user_schema.py
db/: database.py  fastapi_project.db
domain/question/: question_crud.py  question_router.py  question_schema.py
domain/user/: user_crud.py  user_router.py
frontend/: package-lock.json
frontend/src/routes/: Home.svelte
migrations/: env.py
migrations/versions/: bee3e0768bed_.py
models/: Answer.py  Question.py  __init__.py  answer.py  common.py  question.py
study_docs/: alembic.md  contextlib.md  crud.md  defenency_injection.md  guide.md  schema.md
