[project]
name = "fastapi_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.1",
    "fastapi>=0.115.11",
    "mypy>=1.15.0",
    "nodejs>=0.1.1",
    "npm>=0.1.1",
    "uvicorn[standard]>=0.34.0",
]
